2007-10-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Operation notifactions no longer wait for 4 seconds to group them
	together. This is experimental. Uncomment line 620 of
	camel-operation.c to undo this.
	* Added a -DMERGEFOLDERTEST that will perform a test for
	TnyMergeFolder
	* Implemented a small test that makes it possible to transfer messages
	from one folder to another using the demoui
	* Removed a few invalid assertions
	* Unread count upon IDLE events
	* Implemented QRESYNC for IMAP4 servers that already implement it:
	http://tools.ietf.org/html/draft-ietf-lemonade-reconnect-client-06
	* Unread count problems with TnyMergeFolder
	* Removed use of strcasestr, replaced with own implementation
	* non-case sensitivity of IMAP responses
	* Various memory problem fixes

2007-10-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Made sure that the standard Maildir format also works (with the ':'
	as flag separator character). The standard for Tinymail, though, is to
	use the '!' character (fallback when reading is ':').
	* Made the sizes of Maildir E-mails more accurate (using stat())

2007-10-17  Vivek Sekar  <viveksekar@gmail.com>

	* Added microb-engine-dev and changed the debug architecture to 'any'
	in debian/control.maemo1.

2007-10-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed regression on the regression fix of a few days ago :)
	* Renamed Maildir filenames to have '!' in stead of '_' or ':' in
	their filenames

2007-10-15  Jose Dapena Paz  <jdapena@igalia.com>

	* Some fixes to mozembed build.
	* Disable mozembed packages build in maemo.

2007-10-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Regression on yesterday's summary related patch. Fixed
	* Regression on yesterday's mime part parser patch. Fixed

2007-10-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* iconv error situation handler
	* Bugfix when the summary file was not yet created for a Maildir

2007-10-10  Jose Dapena Paz  <jdapena@igalia.com>
